syntax = "proto3";
option go_package = "api/simple_getway;simple_getway";

package simple_getway;

import "google/api/annotations.proto";

service HttpService {
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/get"
    };
  }
  rpc Post(PostRequest) returns (PostResponse) {
    option (google.api.http) = {
      post: "/v1/post"
      body: "*"
    };
  }
}
message GetRequest {
  string name = 1;
}
message GetResponse {
  int32 code = 1;
  string message = 2;
  string body = 3;
}
message PostRequest {
  string name = 1;
}
message PostResponse {
  int32 code = 1;
  string message = 2;
  string body = 3;
}